[gd_scene load_steps=14 format=3 uid="uid://sijqpbdmrppf"]

[ext_resource type="Script" path="res://scenes/basic_enemy.gd" id="1_k6f0b"]
[ext_resource type="Texture2D" uid="uid://uyc37o1vk1sh" path="res://sprites/enemies.png" id="2_6l4xd"]
[ext_resource type="PackedScene" uid="uid://cfc15rkjn5pt" path="res://components/shadow_component.tscn" id="3_w0unf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrcpl"]
size = Vector2(6.75106, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4ka3"]
atlas = ExtResource("2_6l4xd")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppv0l"]
atlas = ExtResource("2_6l4xd")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdc5w"]
atlas = ExtResource("2_6l4xd")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bepr"]
atlas = ExtResource("2_6l4xd")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_m0sqs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4ka3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppv0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdc5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bepr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_n67tq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7r78v"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 3, 0]
}

[sub_resource type="Animation" id="Animation_vt72l"]
resource_name = "jump"
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.24, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, -10), Vector2(0, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.24, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sager"]
_data = {
"RESET": SubResource("Animation_n67tq"),
"idle": SubResource("Animation_7r78v"),
"jump": SubResource("Animation_vt72l")
}

[node name="Frog" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 256
floor_constant_speed = true
script = ExtResource("1_k6f0b")

[node name="ShadowRay" parent="." instance=ExtResource("3_w0unf")]
position = Vector2(0, -2)

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_lrcpl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_m0sqs")

[node name="Hitbox" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(0, 1)
collision_layer = 4
collision_mask = 2

[node name="HitboxShape" type="CollisionShape2D" parent="AnimatedSprite2D/Hitbox"]
scale = Vector2(1.185, 1.04)
shape = SubResource("RectangleShape2D_lrcpl")
debug_color = Color(0.975986, 0, 0.415286, 0.42)

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(2, -3)
target_position = Vector2(4, 0)
collision_mask = 256
collide_with_areas = true

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(-2, -3)
target_position = Vector2(-4, 0)
collision_mask = 256
collide_with_areas = true

[node name="Walk" type="Timer" parent="."]
wait_time = 2.0

[node name="Wait" type="Timer" parent="."]
wait_time = 2.0

[node name="Randomizer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sager")
}
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4096

[node name="Collider2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_lrcpl")

[connection signal="body_entered" from="AnimatedSprite2D/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Walk" to="." method="_on_walk_timeout"]
[connection signal="timeout" from="Wait" to="." method="_on_wait_timeout"]
[connection signal="timeout" from="Randomizer" to="." method="_on_randomizer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
